# AutoDoc

./: .coveragerc  .gitignore  .gitlab-ci.yml  .ruff.toml  Dockerfile  Makefile  README.md  README2.md  SCRUM-4-IMPLEMENTATION-SUMMARY.md  TEST_CONNECTION_GUIDE.md  TEST_DATA.md  alembic.ini  angular.json  autodoc.sh  change_report.json  create_demo_rule.py  demo.py  demo_api.py  demo_go.go  demo_java.js  docker-compose.override.yml  docker-compose.yml  env.example  karma.conf.js  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_integration_dry_run.py  test_new_languages.py  test_payment_api.py
.github/workflows/: autodoc-example.yml  autodoc.yml  build-and-publish.yml  docker-publish.yml
Docker/: .dockerignore  DOCKER.md  Dockerfile  docker-compose.yml
README FILES/: DEMO_OUTPUT.md  DEPLOYMENT_FIX.md  LLM_PROMPTS.md  LOGIN_TROUBLESHOOTING.md  RUNNING_GUIDE.md  SECURITY_IMPLEMENTATION.md
alembic/: env.py
alembic/versions/: 00f83fdbd8e1_merge_migration_heads.py  1ecd7fb57030_add_update_strategy_to_rules.py  495f65cb96e2_add_diff_unified_and_diff_structured_to_.py  4a2518b2ffc4_add_python_symbols_table.py  68bf4aa63d14_merge_migration_heads.py  781f18a4db87_add_priority_to_rules.py  868644b39783_merge_branches.py  9945123fa3a0_merge_llm_config_migration.py  9ffc3641511e_add_mode_field_to_run_table_for_test_.py  a1b2c3d4e5f6_seed_default_templates.py  ab4e828d8044_add_priority_to_rules.py  add_error_status_to_patches.py  add_is_dry_run_to_runs.py  add_javascript_go_symbols_tables.py  add_llm_configs_table.py  add_prompt_id_to_rules.py  add_prompts_table.py  bcff3e1f3440_add_diff_unified_and_diff_structured_to_.py  e166c3632866_0001_init_initial_schema_with_run_.py  e22fa9fd58a6_merge_migration_heads.py  update_default_prompts.py
api/: main.py
api/routers/: auth.py  connections.py  diff_parser.py  health.py  llm_config.py  pages.py  patches.py  prompts.py  rules.py  runs.py  templates.py
artifacts/: change_report.json
artifacts/1/: change_report.json  patches.json
artifacts/17/: patches.json
artifacts/18/: patches.json
artifacts/19/: patches.json
artifacts/24/: patches.json
artifacts/25/: patches.json
artifacts/26/: patches.json
artifacts/27/: patches.json
artifacts/28/: patches.json
artifacts/29/: patches.json
artifacts/30/: patches.json
artifacts/32/: patches.json
artifacts/77/: llm_summary.json  patches.json
artifacts/78/: llm_summary.json  patches.json
artifacts/79/: llm_summary.json  patches.json
autodoc/: __init__.py
autodoc/analysis/: __init__.py  ts_analyzer.py
autodoc/cli/: __init__.py  main.py
autodoc/config/: __init__.py  settings.py
autodoc/logging/: __init__.py  api_integration.py  context.py  correlation.py  examples.py  logger.py
autodoc/templates/: __init__.py  engine.py
core/: config.py  encryption.py  errors.py  logging.py  security_middleware.py  token_masking.py
db/: __init__.py  models.py  retention.py  session.py
docs/: AutoDoc_Complete_Class_Diagram.md  HOW_TO_ADOPT.md  IMPLEMENTATION_SUMMARY.md  NODEJS_SETUP.md  TEMPLATE_ENGINE.md  UX_ACCEPTANCE_CHECKLIST.md
prompts/: default.txt
schemas/: __init__.py  changes.py  connections.py  llm_config.py  pages.py  patches.py  prompts.py  rules.py  runs.py  symbols.py  templates.py
scripts/: analyze_changed_files.py  ci-adapter.sh  ci-lint.sh  ci-test.sh  dev-env.sh  entrypoint.sh  init-db.sql  parse-go.go  parse-typescript.js  redis.conf  run-tests.sh  save_symbols_to_db.py  test-ci-adapter.sh  test-cli.sh
scripts/root-scripts/: test_autodoc.sh
services/: __init__.py  ai_documentation_gen.py  artifact_loader.py  change_detector.py  change_persister.py  change_report_generator.py  confluence_client.py  confluence_content_modifier.py  confluence_format_converter.py  confluence_publisher.py  diff.py  go_analyzer.py  go_parser.py  go_symbol_ingestor.py  javascript_analyzer.py  javascript_parser.py  javascript_symbol_ingestor.py  llm_patch_summarizer.py  llm_summary_artifact_exporter.py  llm_summary_publisher.py  page_rollback.py  patch_generator.py  patch_publisher.py  patches_artifact_exporter.py  patches_publisher.py  python_symbol_ingestor.py  rule_engine.py  rule_matcher.py  rule_storage.py  rules_engine.py  template_engine.py  typescript_analyzer.py  typescript_parser.py  typescript_validator.py
src/: index.html  main.ts  styles.css  test.ts
src/analyzer/: change_detector.py  extractor.py  parser.py
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  app.routes.ts
src/environments/: environment.prod.ts  environment.ts
tests/: README.md  __init__.py  conftest.py  test-parser.js  test_change_report_generator.py  test_diff_parser.py  test_python_symbols_api.py
tests/integration/: test_analyzer_connector_integration.py  test_ci_e2e.py  test_connection_security.py  test_container_smoke.py  test_go_analyzer_integration.py  test_golden_file_integration.py  test_javascript_analyzer_integration.py  test_patch_generation_integration.py  test_templates_api.py  test_typescript_analyzer_integration.py  test_typescript_validation.py
tests/services/: test_diff_service.py
tests/test-samples/: example.ts  exports-basic.ts  exports-default.ts  exports-nested.ts  exports-re-exports.ts  test.go  test.js
tests/unit/: test_analyzers.py  test_api.py  test_artifact_loader.py  test_change_detector.py  test_change_detector_edge_cases.py  test_change_persister.py  test_cli.py  test_config.py  test_confluence_client.py  test_confluence_publisher.py  test_connectors.py  test_crud_operations.py  test_database.py  test_dry_run_mode.py  test_extractor.py  test_go_parser.py  test_javascript_parser.py  test_parser.py  test_patch_generator.py  test_performance_guardrails.py  test_python_symbol_extraction_change_detection.py  test_python_symbol_ingestor.py  test_rule_engine.py  test_rule_matcher.py  test_rules_engine.py  test_schemas.py  test_seeded_templates.py  test_template_engine.py  test_template_variable_validation.py  test_test_mode.py  test_token_masking.py  (+2 more)
(+80 files in other folders)
